--- a/src/component/TodoItem.css
+++ b/src/component/TodoItem.css
@@ -5,18 +5,19 @@
     font-size: 24px;
     color: #4d4d4d;
     padding: 10px 5px;
-    border-bottom: 1px solid #bebebe;
+    border-bottom: 1px solid #EEE;
+    display: flex;
 }
 
 .TodoItem > p {
-    margin: 0;
+    margin: 0 0 0 10px;
 }
 
 .TodoItem:last-child {
-    
+    border-bottom: none;
 }
 
-.TodoItem-complete {
+.TodoItem-complete > p {
     text-decoration: line-through;
     opacity: .3;
 }
