--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,30 @@
 .App {
-  text-align: center;
   width: 300px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid;
+}
+
+.App .Header {
+  padding: 10px 5px;
+  margin: 0 0 0 10px;
+  display: flex;
+  border-bottom: 1px solid #EEE;
+}
+
+.App .Header input {
+  font-family: 'Helvetica Neue',
+  Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  width: 200px;
+  padding-left: 10px;
+  width: 100%;
+  border: none;
+}
+
+.App .Header input:focus {
+  outline: none;
 }
 
 .App-logo {
